force-app/main/default/objects/FinancialHistoryTransaction2__x/FinancialHistoryTransaction2__x.object-meta.xml
<CustomObject>
    <description>FinancialHistoryTransactions</description>
    <externalDataSource>MuleSoftOData</externalDataSource>
    <externalName>FinancialHistoryTransaction</externalName>
    <label>FinancialHistoryTransaction</label>
    <pluralLabel>FinancialHistoryTransactions</pluralLabel>
</CustomObject>