force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>AgreementNumber__c</fullName>
    <externalDeveloperName>agreementNumber</externalDeveloperName>
    <label>AgreementNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>