force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <externalDeveloperName>dueDate</externalDeveloperName>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>