force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <externalDeveloperName>effectiveDate</externalDeveloperName>
    <label>EffectiveDate</label>
    <type>DateTime</type>
</CustomField>