force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/InterestDue__c.field-meta.xml
<CustomField>
    <fullName>InterestDue__c</fullName>
    <externalDeveloperName>interestDue</externalDeveloperName>
    <label>InterestDue</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>