force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/MoneySourceCode__c.field-meta.xml
<CustomField>
    <fullName>MoneySourceCode__c</fullName>
    <externalDeveloperName>moneySourceCode</externalDeveloperName>
    <label>MoneySourceCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>