force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/PaymentByABR__c.field-meta.xml
<CustomField>
    <fullName>PaymentByABR__c</fullName>
    <externalDeveloperName>paymentByABR</externalDeveloperName>
    <label>PaymentByABR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>