force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/PremiumDue__c.field-meta.xml
<CustomField>
    <fullName>PremiumDue__c</fullName>
    <externalDeveloperName>premiumDue</externalDeveloperName>
    <label>PremiumDue</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>