force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/TransactionCode__c.field-meta.xml
<CustomField>
    <fullName>TransactionCode__c</fullName>
    <externalDeveloperName>transactionCode</externalDeveloperName>
    <label>TransactionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>