force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/TransactionDescription__c.field-meta.xml
<CustomField>
    <fullName>TransactionDescription__c</fullName>
    <externalDeveloperName>transactionDescription</externalDeveloperName>
    <label>TransactionDescription</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>