force-app/main/default/objects/FinancialHistoryTransaction2__x/fields/TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionNumber__c</fullName>
    <externalDeveloperName>transactionNumber</externalDeveloperName>
    <label>TransactionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>